--- a/admin.html
+++ b/admin.html
@@ -46,6 +46,7 @@
             const [showMergeModal, setShowMergeModal] = useState(null);
             const [mergeSelection, setMergeSelection] = useState([]);
             const [newMergedName, setNewMergedName] = useState('');
+            const [showManualSpots, setShowManualSpots] = useState(null);
             
             const [newBreak, setNewBreak] = useState({
                 title: '',
